# racemenurotationwithgamepadsupport

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  config.hpp  event.cpp  hooks.cpp  plugin.cpp  vcpkg-configuration.json  vcpkg.json
src/: config.hpp  event.cpp  event.hpp  hooks.hpp  pch.hpp  plugin.cpp
